manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vllm-profiler
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env-injector
  namespace: vllm-profiler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: env-injector
  template:
    metadata:
      labels:
        app: env-injector
    spec:
      serviceAccountName: env-injector
      containers:
      - name: webhook
        image: quay.io/mimehta/vllmprofiler
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: https
        volumeMounts:
        - name: tls
          mountPath: /tls
          readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: env-injector-certs
---
apiVersion: v1
kind: Service
metadata:
  name: env-injector
  namespace: vllm-profiler
spec:
  selector:
    app: env-injector
  ports:
  - port: 443
    targetPort: https
    protocol: TCP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: env-injector-webhook
webhooks:
- name: env-injector.vllmbench.local
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
  failurePolicy: Ignore
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    operations: ["CREATE"]
    resources: ["pods"]
    scope: "*"
  clientConfig:
    service:
      namespace: vllm-profiler
      name: env-injector
      path: /mutate
      port: 443
    caBundle: ""
